--- a/style settings/style-settings.json
+++ b/style settings/style-settings.json
@@ -1,160 +1,27 @@
 {
-  "minimal-style@@minimal-code-scroll": false,
-  "red-graphite@@red-graphite-accent-color@@light": "#2082B7",
-  "red-graphite@@red-graphite-interface-font": "\"Bear Sans UI\"",
-  "red-graphite@@red-graphite-text-font": "\"Bear Sans UI\"",
-  "red-graphite@@red-graphite-monospace-font": "\"Roboto Mono\"",
-  "cupertino@@hide-status-off": false,
-  "cupertino@@windows-mode-off": false,
-  "cupertino@@center-tabs-off": false,
-  "cupertino@@hide-nav-header-off": false,
-  "cupertino@@active-line-off": false,
-  "cupertino@@hide-frontmatter-off": false,
-  "cupertino@@compact-mode": false,
-  "cupertino@@accented-frame-opacity": 0,
-  "obsidian-dynamic-outline@@dynamic-outline-font-size": "var(--font-small)",
-  "obsidian-dynamic-outline@@dynamic-outline-opacity": 1,
-  "minimal-style@@h1-size": "1.4em",
-  "minimal-style@@h2-size": "1.2em",
-  "minimal-style@@h3-size": "1.15em",
-  "minimal-style@@h4-size": "1.1em",
-  "minimal-style@@h5-size": "1.1em",
-  "minimal-style@@h6-size": "1.1em",
-  "minimal-style@@h1-l": false,
-  "minimal-style@@window-title-off": false,
-  "minimal-style@@list-spacing": 0.195,
-  "minimal-style@@h1-color@@dark": "#2D8EC7",
-  "minimal-style@@h1-color@@light": "#2D8EC7",
-  "minimal-style@@h2-color@@light": "#2D8EC7",
-  "minimal-style@@h2-color@@dark": "#2DB7D6",
-  "minimal-style@@h3-color@@light": "#2DB7D6",
-  "minimal-style@@h3-color@@dark": "#2DB7D6",
-  "minimal-style@@h4-color@@light": "#2DB7D6",
-  "minimal-style@@h4-color@@dark": "#2DB7D6",
-  "minimal-style@@h5-color@@light": "#59A2C5",
-  "minimal-style@@h5-color@@dark": "#59A2C5",
-  "minimal-style@@h6-color@@light": "#59A2C5",
-  "minimal-style@@h6-color@@dark": "#59A2C5",
-  "minimal-style@@bg1@@dark": "#212121",
-  "minimal-style@@bg2@@dark": "#2B2E2F",
-  "minimal-style@@link-external-color@@dark": "#59A2C5",
-  "minimal-style@@link-external-color-hover@@dark": "#4B6F9A",
-  "minimal-style@@h2-weight": 500,
-  "minimal-style@@h3-weight": 500,
-  "minimal-style@@h1-weight": 500,
-  "minimal-style@@link-color-hover@@dark": "#4B6F9A",
-  "minimal-style@@link-color@@dark": "#59A2C5",
-  "minimal-style@@ax2@@dark": "#4B6F9A",
-  "minimal-style@@ax3@@dark": "#34547B",
-  "minimal-style@@ax1@@dark": "#59A2C5",
-  "minimal-style@@checkbox-shape": "checkbox-circle",
-  "Appearance-dark@@theme-dark-style-select": "theme-dark-background-darker",
-  "Appearance-dark@@accent-color-override-dark": true,
-  "Appearance-light@@accent-color-override-light": false,
-  "Appearance-light@@card-layout-open-light": true,
-  "Appearance-dark@@card-layout-open-dark": true,
-  "Editor@@line-hover-indicator": true,
-  "Appearance-dark@@accent-dark": "#2D8EC7",
-  "Appearance-dark@@color-red-rgb@@dark": "#FB464C",
-  "Appearance-dark@@color-orange-rgb@@dark": "#E9973F",
-  "Appearance-dark@@color-yellow-rgb@@dark": "#E0DE71",
-  "Appearance-dark@@color-green-rgb@@dark": "#44CF6E",
-  "Appearance-dark@@color-cyan-rgb@@dark": "#53DFDD",
-  "Appearance-dark@@color-blue-rgb@@dark": "#027AFF",
-  "Appearance-dark@@color-purple-rgb@@dark": "#A882FF",
-  "Appearance-dark@@color-pink-rgb@@dark": "#FA99CD",
-  "Appearance-dark@@on-border-dark": "#BABABA",
-  "Appearance-dark@@background-primary@@dark": "#1E1E1E",
-  "Appearance-dark@@background-primary-alt@@dark": "#111111",
-  "Appearance-dark@@background-secondary@@dark": "#262626",
-  "Appearance-dark@@background-secondary-alt@@dark": "#363636",
-  "Appearance-dark@@background-tertiary@@dark": "#262626",
-  "Appearance-dark@@workspace-background-translucent@@dark": "#00000099",
-  "Appearance-dark@@background-modifier-hover@@dark": "#FFFFFF13",
-  "Appearance-dark@@background-modifier-border-hover@@dark": "#3f3f3f",
-  "Appearance-dark@@background-modifier-border-focus@@dark": "#555555",
-  "Appearance-dark@@text-normal@@dark": "#DADADA",
-  "Appearance-dark@@text-muted@@dark": "#BABABA",
-  "Appearance-dark@@text-faint@@dark": "#BABABA",
-  "Appearance-dark@@interactive-normal@@dark": "#363636",
-  "Appearance-dark@@interactive-hover@@dark": "#3F3F3F",
-  "Appearance-dark@@background-activated-tab-header-dark": "#FFFFFF13",
-  "Appearance-dark@@shadow-activated-tab-header-dark": "none",
-  "Editor@@italic-color@@dark": "#D9D9D9",
-  "Appearance-light@@link-external-color@@light": "#43B7D6",
-  "Appearance-light@@link-external-color-hover@@light": "#2D8EC7",
-  "Appearance-dark@@link-external-color-hover@@dark": "#2D8EC7",
-  "Appearance-dark@@link-external-color@@dark": "#43B7D6",
-  "Editor@@link-color@@dark": "#43B7D6",
-  "Editor@@link-color-hover@@dark": "#2D8EC7",
-  "Editor@@link-unresolved-color@@dark": "#DF1C1C",
-  "Editor@@link-unresolved-decoration-color@@dark": "#DF1C1C",
-  "Editor@@link-external-color@@dark": "#43B7D6",
-  "Editor@@link-external-color-hover@@dark": "#2D8EC7",
-  "Editor@@h1-color-select": "h1-color-designated",
-  "Editor@@h2-color-select": "h2-color-designated",
-  "Editor@@h3-color-select": "h3-color-designated",
-  "Editor@@h4-color-select": "h4-color-designated",
-  "Editor@@h5-color-select": "h5-color-designated",
-  "Editor@@h6-color-select": "h6-color-designated",
-  "Editor@@h1-divider-on": false,
-  "Editor@@h2-divider-on": false,
-  "Editor@@h2-size": "1.5em",
-  "Editor@@h2-weight": 650,
-  "Editor@@h3-weight": 625,
-  "Components@@CTA-BTN-enable": true,
-  "Editor@@heading-indicator-off": true,
-  "Components@@tab-autohide": false,
-  "Components@@status-bar-autohide": false,
-  "Components@@Ribbon-autohide": false,
-  "Components@@nav-header-autohide": false,
-  "Components@@tab-title-bar-autohide": false,
-  "Components@@folder-font-bold": true,
-  "Components@@outline-enhanced": false,
-  "Mobile@@card-layout-pad-open": true,
-  "Mobile@@drawer-phone-full-width": false,
-  "Plugin@@Projects-bg-color": "Projects-bg-color-default",
-  "Components@@colorful-folder": false,
-  "Editor@@bold-color@@dark": "#D9D9D9",
-  "Editor@@codeblock-style-select": "codeblock-style-one-dark",
-  "Components@@file-icon-remove": true,
-  "Editor@@h1-size": "1.6em",
-  "Editor@@h3-size": "1.4em",
-  "Editor@@h4-size": "1.3em",
-  "Editor@@h6-size": "1.15em",
-  "Editor@@inline-title-color-select": "inline-title-color-customized",
-  "Editor@@inline-title-color@@dark": "#2DB7D6",
-  "Editor@@h5-size": "1.25em",
-  "Editor@@embed-font-style": "\"\"",
-  "Editor@@h1-accent-color@@dark": "#2DB7D6",
-  "Editor@@h2-accent-color@@dark": "#37B7DF",
-  "Editor@@h3-accent-color@@dark": "#4E9BB5",
-  "Editor@@h4-accent-color@@dark": "#59A2C5",
-  "Editor@@h5-accent-color@@dark": "#59A2C5",
-  "Editor@@h6-accent-color@@dark": "#59A2C5",
-  "Editor@@callout-title-size": "\"\"",
-  "baseline-style@@color-scheme-dark": "default-dark",
   "baseline-style@@accented-interface": true,
-  "baseline-style@@h1-font": "Avenir",
   "baseline-style@@color-scheme-light": "default-light",
-  "baseline-style@@background-contrast-light": "contrast-light",
+  "baseline-style@@background-contrast-light": "contrast-light-vivid",
+  "baseline-style@@color-scheme-dark": "default-dark",
+  "baseline-style@@background-primary@@dark": "#23282E",
   "baseline-style@@background-secondary@@dark": "#171B21",
+  "baseline-style@@background-secondary@@light": "#1C2128",
   "baseline-style@@background-modifier-hover@@dark": "#6AA164",
-  "baseline-style@@background-contrast-dark": "contrast-dark",
   "baseline-style@@layout-style": "layout-baseline",
   "baseline-style@@status-bar-style": "status-bar-compact",
+  "baseline-style@@labeled-tabs": "labeled-tabs-off",
+  "baseline-style@@stacked-nav-off": true,
+  "baseline-style@@nav-item-active-style": "nav-item-baseline",
+  "baseline-style@@hide-vault-switcher-off": true,
+  "baseline-style@@focus-view": "focus-view-off",
+  "baseline-style@@file-header-visibility": "view-header-title-always",
+  "baseline-style@@line-width": 40,
+  "baseline-style@@line-width-wide": 100,
+  "baseline-style@@chart-width": "chart-default-width",
+  "baseline-style@@h1-font": "Avenir",
   "baseline-style@@h2-font": "Avenir",
   "baseline-style@@h3-font": "Avenir",
   "baseline-style@@h4-font": "Avenir",
   "baseline-style@@h5-font": "Avenir",
-  "baseline-style@@h6-font": "Avenir",
-  "baseline-style@@background-primary@@dark": "#23282E",
-  "baseline-style@@background-secondary@@light": "#1C2128",
-  "baseline-style@@labeled-nav-off": true,
-  "baseline-style@@large-new-note": false,
-  "baseline-style@@hide-help": true,
-  "baseline-style@@window-title-off": false,
-  "baseline-style@@mode-switcher-off": false,
-  "baseline-style@@compact-actions-off": false,
-  "baseline-style@@hide-vault-switcher-off": true
+  "baseline-style@@h6-font": "Avenir"
 }
